flux/apps/base/longhorn-system/security/authorization-policy.yaml
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: longhorn-ingress-authz
  namespace: longhorn-system
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: longhorn-ui
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["istio-system"]
    - from:
        - source:
            namespaces: ["longhorn-system"]
